--- a/web-developer.html
+++ b/web-developer.html
@@ -150,7 +150,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://kapacht.join.com/jobs/263237-web-developer-m-w-d'>Job @ kapacht (Frankfurt): Web Developer (m/w/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapacht.join.com/jobs/263237-web-developer-m-w-d'>Job @ kapacht (Frankfurt): Web Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -273,7 +273,7 @@ a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?..
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ocls.applicantstack.com/x/detail/a2rm7gsppro1'>Web Developer - Orange County Library System</a></h5> 
+<h5><a href='https://ocls.applicantstack.com/x/detail/a2rm7gsppro1'>Web Developer - Orange County Library System</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 11, 2019 ... ... filters, and tokenizers to change the way that data is indexed and queried; 
 researches configuration of Solr search engines and the Solr query language.</p>
@@ -294,7 +294,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -355,7 +355,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bluebeam/jobs/1779462'>Job Application for Web Developer, Creative Marketing at Bluebeam, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bluebeam/jobs/1779462'>Job Application for Web Developer, Creative Marketing at Bluebeam, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -398,7 +398,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rationalconsulting/jobs/4328818002'>Job Application for Back-End Web Developer  at Rational Consulting</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rationalconsulting/jobs/4328818002'>Job Application for Back-End Web Developer  at Rational Consulting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
